[gd_scene load_steps=17 format=3 uid="uid://basfcadj1w8xy"]

[ext_resource type="Script" path="res://Autoloads/AudioManager.gd" id="1_cijgp"]
[ext_resource type="AudioStream" uid="uid://b0rfiyh377n7l" path="res://Audio/MainCharacterChompWord.wav" id="2_8vdvv"]
[ext_resource type="AudioStream" uid="uid://bs1ivmg1cvgas" path="res://Audio/BGMusic.wav" id="3_dfa2j"]
[ext_resource type="AudioStream" uid="uid://c8k6ba112klua" path="res://Audio/BGMusicMenu.wav" id="4_p2vgn"]
[ext_resource type="AudioStream" uid="uid://seb0yunvegsx" path="res://Audio/BGMusicDeath.wav" id="5_ijifv"]
[ext_resource type="AudioStream" uid="uid://cvepxah1kkkyc" path="res://Audio/StingSound.wav" id="6_gpf6f"]
[ext_resource type="AudioStream" uid="uid://b2aee6fv6mp03" path="res://Audio/StingWord.wav" id="7_duscj"]
[ext_resource type="AudioStream" uid="uid://pmy82sfm3j87" path="res://Audio/SlapSound.wav" id="8_vlo61"]
[ext_resource type="AudioStream" uid="uid://txpdlfmnyxd6" path="res://Audio/MainCharacterSlapSound.wav" id="9_40mpy"]
[ext_resource type="AudioStream" uid="uid://dforh04glw2dn" path="res://Audio/MainCharacterSlapWord.wav" id="10_eogjw"]
[ext_resource type="AudioStream" uid="uid://b1v74objm4nbq" path="res://Audio/MainCharacterDashSound.wav" id="11_jp5oe"]
[ext_resource type="AudioStream" uid="uid://djpcsq55t8tfu" path="res://Audio/MainCharacterDashWord.wav" id="12_epywv"]
[ext_resource type="AudioStream" uid="uid://cs2pm2ts0rm0s" path="res://Audio/ChompSound.wav" id="13_cfhxg"]
[ext_resource type="AudioStream" uid="uid://yxlrfukakjnm" path="res://Audio/SmallChompRemix.wav" id="14_na62u"]
[ext_resource type="AudioStream" uid="uid://d4kr3xa7kw1xq" path="res://Audio/DeathSound.wav" id="15_lpt2j"]
[ext_resource type="AudioStream" uid="uid://bijqq8cllai7e" path="res://Audio/ImDead.wav" id="16_3cnf5"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_cijgp")

[node name="BiteSFXGoofy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8vdvv")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dfa2j")

[node name="MusicPlayerMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p2vgn")

[node name="MusicPlayerDeath" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -1)
stream = ExtResource("5_ijifv")

[node name="StingSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = ExtResource("6_gpf6f")

[node name="StingSFXGoofy" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = ExtResource("7_duscj")

[node name="SlapSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = ExtResource("8_vlo61")

[node name="MainCharacterSlapSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = ExtResource("9_40mpy")

[node name="MainCharacterSlapSFXGoofy" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = ExtResource("10_eogjw")

[node name="MainCharacterDashSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = ExtResource("11_jp5oe")

[node name="MainCharacterDashSFXGoofy" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = ExtResource("12_epywv")

[node name="BiteSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_cfhxg")

[node name="TurtleSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_na62u")

[node name="DeathSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_lpt2j")

[node name="DeathSFXGoofy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_3cnf5")
