extends Node

@onready var biteSfxGoofy = $BiteSFXGoofy
@onready var musicPlayer = $MusicPlayer
@onready var musicPlayerMenu = $MusicPlayerMenu
@onready var musicPlayerDeath = $MusicPlayerDeath
@onready var stingSfx = $StingSFX
@onready var stingSfxGoofy = $StingSFXGoofy
@onready var slapSfx = $SlapSFX
@onready var mainCharacterSlapSfx = $MainCharacterSlapSFX
@onready var mainCharacterSlapSfxGoofy = $MainCharacterSlapSFXGoofy
@onready var mainCharacterDashSfx = $MainCharacterDashSFX
@onready var mainCharacterDashSfxGoofy = $MainCharacterDashSFXGoofy
@onready var turtleSfx = $TurtleSFX
@onready var deathSfx = $DeathSFX
@onready var deathSfxGoofy = $DeathSFXGoofy
@onready var biteSfx = $BiteSFX
